# zero-scale-proxy

./: Cargo.toml  Dockerfile  ReadMe.md  build.sh  renovate.json  run.sh
.github/workflows/: ci.yml
src/: idle_checker.rs  main.rs  minecraft.rs  proxy_type.rs  sd2d.rs  sdtd.rs  zero_scaler.rs
src/proxy/: mod.rs  tcp.rs  udp.rs
src/proxy/middleware/: a2s_based.rs  csgo.rs  minecraft.rs  mod.rs  sdtd.rs
