[package]
name = "zero-scale-proxy"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2018"

[dependencies]
defer = "0.1.0"
futures = "0.3.15"
k8s-openapi = { version = "0.11.0", features = ["v1_20"] }
kube = "0.55.0"
minecraft-protocol = "0.1.0"
minecraft-protocol-derive = "0.0.0"
tokio = { version = "1.3.0", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.6", features = ["net"] }
log = "0.4.14"
env_logger = "0.8.3"
anyhow = "1.0.40"

[patch.crates-io]
minecraft-protocol = { git = "https://github.com/reitermarkus/minecraft-protocol", branch = "handshake" }
minecraft-protocol-derive = { git = "https://github.com/reitermarkus/minecraft-protocol", branch = "handshake" }
# minecraft-protocol = { path = "./minecraft-protocol/protocol" }
# minecraft-protocol-derive = { path = "./minecraft-protocol/protocol-derive" }
