[package]
name = "zero-scale-proxy"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2021"

[dependencies]
a2s = { version = "0.5.0", features = ["async"] }
defer = "0.1.0"
futures = "0.3.17"
k8s-openapi = { version = "0.13.0", features = ["v1_20"] }
kube = "0.60.0"
minecraft-protocol = "0.1.0"
minecraft-protocol-derive = "0.0.0"
tokio = { version = "1.12.0", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.7", features = ["net"] }
log = "0.4.14"
env_logger = "0.9.0"
anyhow = "1.0.44"
pretty-hex = "0.2.1"
atomic-instant = "0.1.1"

[patch.crates-io]
minecraft-protocol = { git = "https://github.com/reitermarkus/minecraft-protocol", branch = "packet" }
minecraft-protocol-derive = { git = "https://github.com/reitermarkus/minecraft-protocol", branch = "packet" }
# a2s = { git = "https://github.com/reitermarkus/a2s-rs", branch = "master" }
# minecraft-protocol = { path = "./minecraft-protocol/protocol" }
# minecraft-protocol-derive = { path = "./minecraft-protocol/protocol-derive" }
# a2s = { path = "./a2s-rs" }
