[package]
name = "zero-scale-proxy"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2021"
publish = false

[dependencies]
a2s = { version = "0.5.1", features = ["async"] }
defer = "0.1.0"
futures = "0.3.21"
k8s-openapi = { version = "0.15.0", features = ["v1_21"] }
kube = { version = "0.74.0", default-features = false, features = ["client", "rustls-tls"] }
minecraft-protocol = "0.1.0"
minecraft-protocol-derive = "0.0.0"
tokio = { version = "1.17.0", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
log = "0.4.14"
env_logger = "0.9.0"
anyhow = "1.0.55"
pretty-hex = "0.3.0"
atomic-instant = "0.1.1"
socket2 = { version = "0.4.4", features = ["all"] }

[patch.crates-io]
minecraft-protocol = { git = "https://github.com/reitermarkus/minecraft-protocol", branch = "packet" }
minecraft-protocol-derive = { git = "https://github.com/reitermarkus/minecraft-protocol", branch = "packet" }
# minecraft-protocol = { path = "./minecraft-protocol/protocol" }
# minecraft-protocol-derive = { path = "./minecraft-protocol/protocol-derive" }
